# repeater-atlas

./: .dockerignore  .editorconfig  .env  .envrc  .gitignore  .pgpass  .pre-commit-config.yaml  .prettierignore  AGENTS.md  Cargo.toml  DATA_MODEL.md  DESIGN.md  Dockerfile  IMPLEMENTATION.md  Justfile  Makefile  TESTING.md  askama.toml  diesel.toml  docker-compose.yml  init.sql  package-lock.json  package.json  prek.toml
.beads/: issues.jsonl
.github/workflows/: docker.yml
.tickets/: ra-033d.md  ra-035f.md  ra-04c8.md  ra-073d.md  ra-09f3.md  ra-0e10.md  ra-0eb0.md  ra-0fbf.md  ra-1031.md  ra-1fef.md  ra-2021.md  ra-2215.md  ra-2c59.md  ra-31c5.md  ra-369b.md  ra-39f1.md  ra-3ab5.md  ra-3bbc.md  ra-428d.md  ra-438b.md  ra-4603.md  ra-4701.md  ra-4c7d.md  ra-4ca0.md  ra-506a.md  ra-5249.md  ra-5378.md  ra-5573.md  ra-576c.md  ra-58aa.md  ra-5a11.md  ra-622a.md  ra-6363.md  ra-6713.md  ra-6834.md  ra-6ef6.md  ra-73ce.md  ra-7521.md  ra-7527.md  ra-752e.md  (+34 more)
data/: NRRL-Relestasjoner.csv  README.md  contacts.csv  geocoder.csv  ham_clubs.csv  repeater-links.csv  repeaters-la1t.csv  repeaters-la2t.csv  repeaters-la4a.csv  repeaters-la4k.csv  repeaters-la4o.csv  repeaters-la4o.tsv  repeaters-la9k.csv  repeaters-zz-extra.csv  repeaters.tsv
docs/: CODE.md  DATA_MODEL.md  DESIGN.md  DESIGN_AUTHENTICATION.md  DESIGN_EXPORT.md  DESIGN_REPEATER.md  DESIGN_SEARCH.md  IMPLEMENTATION.md  README.md  TESTING.md  TODOs.md  chirp-example-blank.csv  code.md  data-model.md  testing.md
docs/design/: README.md  authentication.md  chirp-example-tones.csv  export.md  repeater.md
docs/pages/: README.md  map.md  my-page.md  repeater-detail.md
migrations/2026-01-14-220834-0000_create_repeaters/: down.sql  up.sql
migrations/2026-01-16-000000-0000_entity_baseline/: down.sql  up.sql
migrations/2026-01-16-000000-0000_ham_club_baseline/: down.sql  up.sql
migrations/2026-01-16-000001-0000_repeater_baseline/: down.sql  up.sql
migrations/2026-01-16-101815-0000_baseline/: down.sql  up.sql
migrations/2026-01-17-183906-0000_make_ham_club_name_not_null/: down.sql  up.sql
migrations/2026-01-18-065911-0000_redo_repeater_schema/: down.sql  up.sql
migrations/2026-01-21-200943-0000_add_user_table/: down.sql  up.sql
migrations/2026-04-03-200249-0000_user_location/: down.sql  up.sql
src/: auth.rs  db_pool.rs  error.rs  frequency.rs  lib.rs  logging_connection_manager.rs  maidenhead_locator.rs  main.rs  pg_tls_connection_manager.rs  point.rs  repeater_service.rs  schema.rs  test_data.rs
src/dao/: call_sign.rs  contact.rs  entity.rs  ham_club.rs  mod.rs  repeater.rs  repeater_link.rs  repeater_port.rs  repeater_service.rs  repeater_service_aprs.rs  repeater_service_c4fm.rs  repeater_service_dmr.rs  repeater_service_dstar.rs  user.rs  (+4 more)
static/: repeater-atlas.css  repeater-atlas.js
support/: Dockerfile.claude
templates/: index.html  logbook.typ
tests/: repeater_insert.rs  repeater_link.rs  web_routes.rs
(+43 files in other folders)
