[package]
name = "repeater-atlas"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
async-trait = "0.1"
askama = { version = "0.15", features = ["serde_json"] }
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie", "typed-routing"] }
bb8 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.4"
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] }
dotenvy = "0.15"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
maidenhead = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
time = "0.3"
tokio = { version = "1.49", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.20", features = ["v4"] }

[dev-dependencies]
diesel_migrations = "2.3"
tower = "0.5"
http-body-util = "0.1"
